#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT([unnatural_instincts], 0.1, [halkeye@gmail.com])
AM_INIT_AUTOMAKE

AC_CONFIG_SRCDIR([src])
AM_CONFIG_HEADER(config.h)


# Checks for programs.
AC_PROG_AWK
AC_PROG_CXX
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S

# Checks for libraries.
# FIXME: Replace `main' with a function in `-ldl':
AC_CHECK_LIB([dl], [main])

# Checks for header files.
AC_CHECK_HEADERS([fcntl.h netinet/in.h sys/socket.h sys/time.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_CONST
AC_HEADER_TIME

# Do we need to use -ldl?
AC_CHECK_LIB([dl], [dlopen], 
             LDADD="$LDADD -ldl",
             AC_MSG_WARN([libdl doesn't seem to be needed on this system]))

# Checks for library functions.
AC_HEADER_STDC
AC_FUNC_SELECT_ARGTYPES
AC_CHECK_FUNCS([select socket])

AC_CONFIG_FILES([Makefile
                 src/Makefile])
AC_OUTPUT
